# cinnabar-coast

./: .gitignore  CLAUDE.md  README.md  cinnabar-coast.cabal
app/: Main.hs
data/charsets/: gen1-de.json  gen1-en.json  gen1-frde.json  gen1-ites.json  gen1-jp.json  gen2-de.json  gen2-en.json  gen2-frde.json  gen2-ites.json  gen2-jp.json  gen2-ko.json
data/csv/: egg_moves.csv  event_flags.csv  evolutions.bak.csv  evolutions.csv  gen1_badges.csv  gen1_gym_leaders.csv  gen1_towns.csv  gen1rb_trades.csv  gen1yellow_trades.csv  gen2_badges.csv  gen2_gym_leaders.csv  gen2_spawns.csv  internal_index.csv  items.csv  learnsets.bak.csv  learnsets.csv  map_scripts.csv  moves.bak.csv  moves.csv  species.bak.csv  species.csv  tmhm.bak.csv  tmhm.csv  tmhm_compat.bak.csv  tmhm_compat.csv  toggle_flags.csv  tutor.csv
data/event-pokemon/: gen1_european_events.csv  gen1_game_based.csv  gen1_japanese_events.csv  gen2_european_events.csv  gen2_game_based.csv  gen2_japanese_events.csv  gen2_pcny_events.csv  notable_id_numbers_gen1_gen2.csv
extract/: Main.hs
extract/Extract/: ASM.hs  Badges.hs  EggMoves.hs  Events.hs  EvosAttacks.hs  Items.hs  Moves.hs  Species.hs  TMHM.hs
reference/save-format/: gen1-save-structure.md  gen2-save-structure.md
scripts/: generate_evolutions.py
sketch/: Types.hs
src/Cinnabar/: Binary.hs  Data.hs  Error.hs  Legality.hs  Schema.hs  Stats.hs  TextCodec.hs  Types.hs
src/Cinnabar/Save/: Checksum.hs  Interpret.hs  Layout.hs  Raw.hs  Serialize.hs
src/Cinnabar/Save/Gen1/: Raw.hs
src/Cinnabar/Save/Interpret/: Decode.hs  Gen1.hs  Types.hs
src/Cinnabar/Save/Interpret/Gen1/: HallOfFame.hs  Items.hs  Misc.hs  Pokemon.hs  Progress.hs
src/Cinnabar/Types/: Internal.hs
src/Pokemon/: Binary.hs  Data.hs  Error.hs  Legality.hs  Schema.hs  Stats.hs  TextCodec.hs  Types.hs
src/Pokemon/Save/: Checksum.hs  Layout.hs
src/Pokemon/Types/: Internal.hs
test/: Spec.hs
