cabal-version:   3.0
name:            cinnabar-coast
version:         0.1.0.0
synopsis:        Pokemon Gen 1/2 save file engine
license:         BSD-3-Clause
build-type:      Simple

data-dir:        data
data-files:
  csv/*.csv
  charsets/*.json
  event-pokemon/*.csv

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  default-language: GHC2024
  autogen-modules:  Paths_cinnabar_coast
  other-modules:    Paths_cinnabar_coast
  exposed-modules:
    Cinnabar.Types
    Cinnabar.Types.Internal
    Cinnabar.Error
    Cinnabar.Schema
    Cinnabar.Data
    Cinnabar.Stats
    Cinnabar.Legality
    Cinnabar.TextCodec
    Cinnabar.Binary
    Cinnabar.Save.Layout
    Cinnabar.Save.Checksum
    Cinnabar.Save.Gen1.Raw
    Cinnabar.Save.Raw
  build-depends:
    base       >= 4.18 && < 5,
    aeson      >= 2.1,
    bytestring >= 0.11,
    containers >= 0.6,
    text       >= 2.0,
    filepath   >= 1.4,
    transformers >= 0.5

executable cinnabar
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  default-language: GHC2024
  build-depends:
    base >= 4.18 && < 5,
    bytestring >= 0.11,
    containers >= 0.6,
    text >= 2.0,
    cinnabar-coast

executable extract
  import:           warnings
  hs-source-dirs:   extract
  main-is:          Main.hs
  other-modules:    Extract.ASM
                    Extract.Moves
                    Extract.TMHM
                    Extract.Items
                    Extract.EggMoves
                    Extract.EvosAttacks
                    Extract.Species
  default-language: GHC2024
  build-depends:
    base       >= 4.18 && < 5,
    containers >= 0.6,
    text       >= 2.0,
    megaparsec >= 9.0,
    filepath   >= 1.4,
    directory  >= 1.3

test-suite cinnabar-test
  import:           warnings
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  default-language: GHC2024
  build-depends:
    base >= 4.18 && < 5,
    cinnabar-coast,
    bytestring >= 0.11,
    containers >= 0.6,
    text >= 2.0,
    hspec >= 2.11,
    QuickCheck >= 2.14,
    directory >= 1.3
